--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.3",
     "browser-image-compression": "^2.0.2",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "postgres": "^3.4.7",
     "react": "19.2.3",
