--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@supabase/supabase-js": "^2.89.0",
     "bcryptjs": "^3.0.3",
     "browser-image-compression": "^2.0.2",
+    "file-type": "^21.2.0",
+    "jose": "^6.1.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
