--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^10.32.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "bcryptjs": "^3.0.3",
     "browser-image-compression": "^2.0.2",
     "file-type": "^21.2.0",
+    "form-data": "^4.0.5",
     "jose": "^6.1.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
+    "mailgun.js": "^12.4.1",
     "next": "16.1.0",
     "postgres": "^3.4.7",
     "react": "19.2.3",
@@ -28,9 +31,11 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/mailgun-js": "^0.22.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
     "tailwindcss": "^4",
