--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.562.0",
     "mailgun.js": "^12.4.1",
     "next": "16.1.0",
+    "nextjs-toploader": "^3.9.17",
     "postgres": "^3.4.7",
     "react": "19.2.3",
     "react-dom": "19.2.3",
