--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "form-data": "^4.0.5",
     "jose": "^6.1.3",
     "js-cookie": "^3.0.5",
+    "lru-cache": "^11.2.4",
     "lucide-react": "^0.562.0",
     "mailgun.js": "^12.4.1",
     "next": "16.1.0",
