--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@sentry/nextjs": "^10.32.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@tanstack/react-query": "^5.90.17",
     "bcryptjs": "^3.0.3",
     "browser-image-compression": "^2.0.2",
     "file-type": "^21.2.0",
     "form-data": "^4.0.5",
+    "fs": "^0.0.1-security",
     "jose": "^6.1.3",
     "js-cookie": "^3.0.5",
     "lru-cache": "^11.2.4",
@@ -27,6 +29,7 @@
     "mailgun.js": "^12.4.1",
     "next": "16.1.0",
     "nextjs-toploader": "^3.9.17",
+    "path": "^0.12.7",
     "postgres": "^3.4.7",
     "react": "19.2.3",
     "react-dom": "19.2.3",
